--- a/foottball-lobby/app/build.gradle
+++ b/foottball-lobby/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id("androidx.navigation.safeargs.kotlin")
 }
 
 android {
@@ -31,6 +32,9 @@ android {
         jvmTarget = '1.8'
     }
 }
+
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 dependencies {
     // Java language implementation
@@ -63,4 +67,11 @@ dependencies {
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    implementation platform('com.google.firebase:firebase-bom:29.0.3')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation("com.google.firebase:firebase-auth-ktx:21.0.1")
+    implementation 'com.facebook.android:facebook-android-sdk:12.3.0'
+
 }
