--- a/foottball-lobby/build.gradle
+++ b/foottball-lobby/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.nav_version = "2.3.5"
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
     dependencies {
@@ -20,6 +21,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
 }
