--- a/foottball-lobby/app/src/main/AndroidManifest.xml
+++ b/foottball-lobby/app/src/main/AndroidManifest.xml
@@ -10,14 +10,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Footballlobby">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".SplashActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
